// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractCLI with mocked child_process.spawn changesets.info({"branchId": "branch-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "changeset",
        "project-id",
        "--commit",
        "commit-sha",
        "--branch",
        "branch-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn collections.info({"branchId": "branch-id", "collectionId": "collection-id", "projectId": "project-id"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "collection",
        "project-id",
        "collection-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn collections.list({"branchId": "branch-id", "projectId": "project-id", "sha": "branch-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "collections",
        "project-id",
        "--branch",
        "branch-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn collections.list({"projectId": "project-id"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "collections",
        "project-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"branchId": "branch-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commit",
        "project-id",
        "commit-sha",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "layer-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commits",
        "project-id",
        "branch-id",
        "--file-id",
        "file-id",
        "--layer-id",
        "layer-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "file-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commits",
        "project-id",
        "branch-id",
        "--file-id",
        "file-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"branchId": "branch-id", "projectId": "project-id", "sha": "branch-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commits",
        "project-id",
        "branch-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn data.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "latest"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commits",
        "project-id",
        "branch-id",
        "--file-id",
        "file-id",
        "--layer-id",
        "layer-id",
        "--limit",
        "1",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "layer",
        "data",
        "project-id",
        "commit-sha",
        "file-id",
        "layer-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn data.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "layer-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "layer",
        "data",
        "project-id",
        "layer-sha",
        "file-id",
        "layer-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn files.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "file-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "file",
        "project-id",
        "file-sha",
        "file-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn files.info({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "latest"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commits",
        "project-id",
        "branch-id",
        "--file-id",
        "file-id",
        "--limit",
        "1",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "file",
        "project-id",
        "commit-sha",
        "file-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id", "sha": "branch-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "files",
        "project-id",
        "branch-sha",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id", "sha": "commit-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "files",
        "project-id",
        "commit-sha",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"branchId": "branch-id", "projectId": "project-id", "sha": "latest"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commits",
        "project-id",
        "branch-id",
        "--limit",
        "1",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "files",
        "project-id",
        "commit-sha",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn layers.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "latest"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commits",
        "project-id",
        "branch-id",
        "--file-id",
        "file-id",
        "--layer-id",
        "layer-id",
        "--limit",
        "1",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "layer",
        "meta",
        "project-id",
        "commit-sha",
        "file-id",
        "layer-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn layers.info({"branchId": "branch-id", "fileId": "file-id", "layerId": "layer-id", "pageId": "page-id", "projectId": "project-id", "sha": "layer-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "layer",
        "meta",
        "project-id",
        "layer-sha",
        "file-id",
        "layer-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn layers.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "file-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "layers",
        "project-id",
        "file-sha",
        "file-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn layers.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "latest"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "commits",
        "project-id",
        "branch-id",
        "--file-id",
        "file-id",
        "--limit",
        "1",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "layers",
        "project-id",
        "commit-sha",
        "file-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn pages.info({"branchId": "branch-id", "fileId": "file-id", "pageId": "page-id", "projectId": "project-id", "sha": "page-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "file",
        "project-id",
        "page-sha",
        "file-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;

exports[`AbstractCLI with mocked child_process.spawn pages.list({"branchId": "branch-id", "fileId": "file-id", "projectId": "project-id", "sha": "file-sha"}) 1`] = `
Object {
  "spawn": Array [
    Array [
      "<PROJECT_ROOT>/fixtures/abstract-cli",
      Array [
        "--user-token",
        "abstract-token",
        "--api-url",
        "https://api.goabstract.com",
        "file",
        "project-id",
        "file-sha",
        "file-id",
      ],
      Object {
        "cwd": "<PROJECT_ROOT>",
      },
    ],
  ],
}
`;
